welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:12: error: type mismatch;
 found   : Unit
 required: Boolean
if (nums.length <= 3) {
^